fix mobile number z-index issue

--- a/apps/web-giddh/src/app/add-company/add-company.component.scss
+++ b/apps/web-giddh/src/app/add-company/add-company.component.scss
@@ -9,6 +9,9 @@
         .mobile-number {
             position: relative;
             padding-right: 6px;
+            .flag-input{
+                z-index: 2 !important;
+            }
             .country-flag {
                 position: absolute;
                 top: 50%;
